--- a/config/locales/es-AR.yml
+++ b/config/locales/es-AR.yml
@@ -140,17 +140,17 @@ es-AR:
   number:
     currency:
       format:
-        delimiter: ! ','
+        delimiter: ! '.'
         format: ! '%u%n'
         precision: 2
-        separator: .
+        separator: ','
         significant: false
         strip_insignificant_zeros: false
         unit: $
     format:
-      delimiter: ! ','
-      precision: 2
-      separator: .
+      delimiter: ! '.'
+      precision: 3
+      separator: ','
       significant: false
       strip_insignificant_zeros: false
     human:
@@ -164,7 +164,7 @@ es-AR:
           trillion: billón
           unit: ''
       format:
-        delimiter: ! ','
+        delimiter: ! '.'
         precision: 3
         significant: true
         strip_insignificant_zeros: true
@@ -180,10 +180,10 @@ es-AR:
           tb: TB
     percentage:
       format:
-        delimiter: ! ','
+        delimiter: ! '.'
     precision:
       format:
-        delimiter: ! ','
+        delimiter: ! '.'
   support:
     array:
       last_word_connector: ! ' y '
