--- a/config/locales/es-AR.yml
+++ b/config/locales/es-AR.yml
@@ -1,4 +1,73 @@
 es-AR:
+  ransack:
+    all: todos
+    and: y
+    any: cualquier
+    asc: ascendente
+    attribute: atributo
+    combinator: combinado
+    condition: condición
+    desc: descendente
+    or: o
+    predicate: predicado
+    predicates:
+      blank: está en blanco
+      cont: contiene
+      cont_all: contiene todos
+      cont_any: contiene cualquier
+      does_not_match: no coincide
+      does_not_match_all: no coincide con todos
+      does_not_match_any: no coincide con ninguna
+      end: termina con
+      end_all: termina con todo
+      end_any: termina con cualquier
+      eq: es igual a
+      eq_all: es igual a todos
+      eq_any: es igual a cualquier
+      'false': es falso
+      gt: mayor que
+      gt_all: mayor que todos
+      gt_any: mayor que cualquier
+      gteq: mayor que o igual a
+      gteq_all: mayor que o igual a todos
+      gteq_any: mayor que o igual a cualquier
+      in: en
+      in_all: en todos
+      in_any: en cualquier
+      lt: menor que
+      lt_all: menor o igual a
+      lt_any: menor que cualquier
+      lteq: less than or equal to
+      lteq_all: menor o igual a todos
+      lteq_any: menor o igual a cualquier
+      matches: coincidir
+      matches_all: coincidir a todos
+      matches_any: coincidir a cualquier
+      not_cont: no contiene
+      not_cont_all: no contiene toda
+      not_cont_any: no contiene ninguna
+      not_end: no termina con
+      not_end_all: no termina con todo
+      not_end_any: no termina con cualquier
+      not_eq: no es igual a
+      not_eq_all: no es iguala todos
+      not_eq_any: no es igual a cualquier
+      not_in: no en
+      not_in_all: no en todos
+      not_in_any: no en cualquier
+      not_null: no es nula
+      not_start: no inicia con
+      not_start_all: no inicia con toda
+      not_start_any: no comienza con cualquier
+      'null': es nula
+      present: es presente
+      start: comienza con
+      start_all: comienza con toda
+      start_any: comienza con cualquier
+      'true': es verdadero
+    search: buscar
+    sort: ordernar
+    value: valor
   will_paginate:
     next_label: Siguiente
     previous_label: Anterior
@@ -341,3 +410,4 @@ es-AR:
     add: Agregar
     join: Unir
     print: Imprimir
+    search: Buscar
