--- a/config/locales/es-AR.yml
+++ b/config/locales/es-AR.yml
@@ -286,7 +286,7 @@ es-AR:
   time:
     am: am
     formats:
-      default: ! '%a, %d de %b de %Y a las %H:%M:%S %Z'
+      default: ! '%d/%m/%Y %H:%M'
       long: ! '%A, %d de %B de %Y a las %I:%M %p'
       short: ! '%d de %b a las %H:%M hrs'
     pm: pm
@@ -392,12 +392,17 @@ es-AR:
     new: Nuevo
     edit: Modificar
     delete: Eliminar
-    join: Juntar elementos
+    join: "Juntar elementos"
     model:
-      new: Crear %{model}
-      edit: Actualizar %{model}
+      new: "Crear %{model}"
+      edit: "Actualizar %{model}"
+    formula_element:
+      report: "Reporte"
+      formulas: "Fórmulas"
+    formula:
+      products: "Productos"
   messages:
-    are_you_sure: ¿Esta seguro?
+    are_you_sure: "¿Esta seguro?"
   controllers:
     successfully_created: Creado correctamente
     successfully_updated: Actualizado correctamente
