Imprimir reporte, o exportar a excel, ahh y el boton de imprimir en los highcharts

--- a/config/locales/es-AR.yml
+++ b/config/locales/es-AR.yml
@@ -417,6 +417,7 @@ es-AR:
     add: Agregar
     join: Unir
     print: Imprimir
+    export: Exportar planilla
     search: Buscar
     filter: Filtrar
     cancel: Anular
