--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        formula:
+          items_proportion_should_be_100: Total proportion must be 100. Difference is %{difference}.
