Add search with ransack

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -46,4 +46,6 @@ es:
       show: "Materia prima"
       new: "Nueva materia prima"
       edit: "Editar materia prima"
+  placeholders:
+    search_by_name: "Buscar por nombre"
 
