Add new formula form

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -48,6 +48,7 @@ es:
   titles:
     formula:
       index: "Fórmulas"
+      new: "Nueva fórmula"
     formula_element:
       index: "Materias primas"
       show: "Materia prima"
