--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -18,6 +18,7 @@ es:
         name: "Nombre"
         min_stock: "Stock mínimo"
         current_stock: "Stock actual"
+        stock_level: "Nivel de stock"
         infinite: "Recurso Ilimitado"
         updated_at: "Actualizado"
         created_at: "Ingresado"
