--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -36,6 +36,23 @@ es:
         formula_items: "Ingredientes"
         updated_at: "Actualizado"
         created_at: "Ingresado"
+      making_order:
+        comments: "Observaciones"
+        created_at: "Ingresado"
+        id: "ID"
+        making_order_formula: "Fórmula"
+        making_order_items: "Productos"
+        mixer_capacity: "Mezcladora"
+        quantity: "Cantidad"
+        rounds_count: "Mezclas"
+        state: "Estado"
+        state_values:
+          "0": "En producción"
+          "1": "Terminada"
+          "2": "Anulada"
+        total_weight: "Peso total"
+        updated_at: "Actualizado"
+        weight_per_round: "Peso por mezcla"
 
   messages:
     are_you_sure: "¿Estás seguro?"
@@ -47,14 +64,15 @@ es:
     dashboard: "Tablero"
     new: "Nuevo"
   titles:
+    making_order:
+      index: "Órdenes de producción"
+      new: "Nueva orden de producción"
     formula:
       index: "Fórmulas"
       new: "Nueva fórmula"
     formula_element:
       index: "Materias primas"
-      show: "Materia prima"
       new: "Nueva materia prima"
-      edit: "Editar materia prima"
   placeholders:
     search_by_name: "Buscar por nombre"
     search_by_name_abrasive_grain_hardness_porosity_alloy: "Buscar por nombre, abrasivo, grano, dureza, porosidad o liga"
