--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -246,4 +246,5 @@ es:
       default: "%a, %d de %b de %Y a las %H:%M:%S %Z"
       long: "%A, %d de %B de %Y a las %I:%M %p"
       short: "%d de %b a las %H:%M hrs"
+      compact: "%d/%m/%Y %H:%M"
     pm: pm
