WIP making orders CRUD

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -59,6 +59,7 @@ es:
   actions:
     archive: "Archivar"
     save: "Guardar"
+    cancel: "Cancelar"
   navigation:
     edit: "Editar"
     dashboard: "Tablero"
