--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -53,6 +53,14 @@ es:
         total_weight: "Peso total"
         updated_at: "Actualizado"
         weight_per_round: "Peso por mezcla"
+      product:
+        id: "ID"
+        name: "Nombre"
+        weight: "Peso"
+        price: "Precio"
+        formula: "Fórmula"
+        updated_at: "Actualizado"
+        created_at: "Ingresado"
 
   messages:
     are_you_sure: "¿Estás seguro?"
@@ -68,6 +76,9 @@ es:
     making_order:
       index: "Órdenes de producción"
       new: "Nueva orden de producción"
+    product:
+      index: "Productos"
+      new: "Nuevo producto"
     formula:
       index: "Fórmulas"
       new: "Nueva fórmula"
