--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -4,6 +4,8 @@ es:
       models:
         formula:
           proportion_must_be_one_hundred: "La suma de los porcentajes debe ser 100. La diferencia es %{difference}"
+        product:
+          name_must_be_unique: 'Ya existe un producto con la misma descripcion, es el <a href="/factory/products/%{other_product_id}" target="_blank">%{other_product_name}</a>'
     models:
       formula_element: "Materia prima"
       formula_item:
@@ -56,9 +58,13 @@ es:
       product:
         id: "ID"
         name: "Nombre"
+        shape: "Forma"
+        size: "Dimensiones"
         weight: "Peso"
+        pressure: "Presión"
         price: "Precio"
         formula: "Fórmula"
+        formula_id: "Fórmula"
         updated_at: "Actualizado"
         created_at: "Ingresado"
 
