--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -4,10 +4,11 @@ es:
       models:
         formula:
           proportion_must_be_one_hundred: "La suma de los porcentajes debe ser 100. La diferencia es %{difference}"
+          duplicated_formula_elements: "No puede haber materias primas repetidas"
         product:
           name_must_be_unique: 'Ya existe un producto con la misma descripcion, es el <a href="/factory/products/%{other_product_id}" target="_blank">%{other_product_name}</a>'
         formula_element:
-          formula_exists: 'No se puede eliminar porque al menos una fórmula depende de esta materia prima'
+          formula_exists: "No se puede eliminar porque al menos una fórmula depende de esta materia prima"
     models:
       formula_element: "Materia prima"
       formula_item:
@@ -16,6 +17,9 @@ es:
       formula:
         one: "Fórmula"
         other: "Fórmulas"
+      product:
+        one: "Producto"
+        other: "Productos"
     attributes:
       formula_element:
         id: "ID"
@@ -76,6 +80,7 @@ es:
     archive: "Archivar"
     save: "Guardar"
     cancel: "Cancelar"
+    add_new_model: "Agregar %{model}"
   navigation:
     edit: "Editar"
     dashboard: "Tablero"
