--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -9,6 +9,8 @@ es:
           name_must_be_unique: 'Ya existe un producto con la misma descripcion, es el <a href="/factory/products/%{other_product_id}" target="_blank">%{other_product_name}</a>'
         formula_element:
           formula_exists: "No se puede eliminar porque al menos una fórmula depende de esta materia prima"
+        making_order:
+          products_formula_is_different: "Algunos productos no tienen la misma fórmula"
     models:
       formula_element: "Materia prima"
       formula_item:
@@ -55,9 +57,9 @@ es:
         rounds_count: "Mezclas"
         state: "Estado"
         state_values:
-          "0": "En producción"
-          "1": "Terminada"
-          "2": "Anulada"
+          "in_progress": "En producción"
+          "completed": "Terminada"
+          "canceled": "Anulada"
         total_weight: "Peso total"
         updated_at: "Actualizado"
         weight_per_round: "Peso por mezcla"
