Improve search products enabling search by id (#id)
Also improve overall page rendering speed by fetching products from server when needed

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -69,6 +69,8 @@ es:
         total_weight: "Peso total"
         updated_at: "Actualizado"
         weight_per_round: "Peso por mezcla"
+      making_order_items:
+        quantity: "Cantidad de producto"
       product:
         id: "ID"
         name: "Nombre"
