--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -247,4 +247,5 @@ es:
       long: "%A, %d de %B de %Y a las %I:%M %p"
       short: "%d de %b a las %H:%M hrs"
       compact: "%d/%m/%Y %H:%M"
+      machine: "%Y-%m-%d %H:%M:%S%z"
     pm: pm
