--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -41,6 +41,12 @@ es:
       supplier:
         one: "Proveedor"
         other: "Proveedores"
+      client:
+        one: "Cliente"
+        other: "Clientes"
+      discount:
+        one: "Descuento"
+        other: "Descuentos"
     attributes:
       formula_element:
         id: "ID"
@@ -67,6 +73,7 @@ es:
         created_at: "Ingresado"
       making_order:
         comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         created_at: "Ingresado"
         id: "ID"
         making_order_formula: "Fórmula"
@@ -88,7 +95,8 @@ es:
         cover: "Portada"
         created_at: "Ingresado"
         current_stock: "Stock actual"
-        comments: "Descripción"
+        comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         id: "ID"
         max_stock: "Stock máximo"
         min_stock: "Stock mínimo"
@@ -161,10 +169,12 @@ es:
         updated_at: "Actualizado"
         created_at: "Ingresado"
         comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         bank_name: "Banco"
         bank_account_number: "Cuenta"
         routing_number: "CBU"
   messages:
+    ago: "hace %{time}"
     are_you_sure: "¿Estás seguro?"
     saving: "Guardando..."
     no_suppliers: "No hay proveedores"
@@ -193,6 +203,7 @@ es:
     print: "Imprimir"
     show_detail: "Ver detalle"
   titles:
+    recent_activities: "Historial de actividades"
     client:
       index: "Clientes"
       new: "Nuevo cliente"
@@ -243,3 +254,14 @@ es:
         success: "Producto actualizado"
       destroy:
         success: "Producto eliminado"
+
+  paper_trail:
+    unknown_user: "Sistema"
+    no_activity: "No hay actividad reciente."
+    blank_value: "vacio"
+    boolean_true: "Si"
+    boolean_false: "No"
+    events:
+      create: "creó"
+      update: "actualizó"
+      destroy: "eliminó"
