--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -120,23 +120,28 @@ es:
         size: "Dimensiones"
         weight: "Peso"
       client:
-        id: "ID"
-        name: "Nombre"
-        tax_identification: "CUIT"
-        email: "Email"
-        phone: "Teléfono"
-        country: "País"
-        province: "Provincia"
-        zipcode: "Código Postal"
         address: "Dirección"
-        maps_url: "Enlace Mapa"
         client_type: "Tipo de cliente"
         client_type_values:
           regular: "Usuario"
           distributor: "Distribuidor"
           hardware_store: "Ferretería"
-        updated_at: "Actualizado"
+        country: "País"
         created_at: "Ingresado"
+        email: "Email"
+        id: "ID"
+        maps_url: "Enlace Mapa"
+        name: "Nombre"
+        phone: "Teléfono"
+        province: "Provincia"
+        tax_identification: "CUIT"
+        tax_type: "Inscripción tributaria"
+        tax_type_values:
+          final_consumer: "Consumidor final"
+          general_regime: "Responsable Inscripto"
+          simplified_regime: "Monotributista"
+        updated_at: "Actualizado"
+        zipcode: "Código Postal"
       discount:
         client_type: "Tipo de cliente"
         discount_type: "Tipo de descuento"
