Add seller_name to clients

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -134,6 +134,7 @@ es:
         name: "Nombre"
         phone: "Teléfono"
         province: "Provincia"
+        seller_name: "Vendedor"
         tax_identification: "CUIT"
         tax_type: "Inscripción tributaria"
         tax_type_values:
