Show product activity feed

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -67,6 +67,7 @@ es:
         created_at: "Ingresado"
       making_order:
         comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         created_at: "Ingresado"
         id: "ID"
         making_order_formula: "Fórmula"
@@ -88,7 +89,8 @@ es:
         cover: "Portada"
         created_at: "Ingresado"
         current_stock: "Stock actual"
-        comments: "Descripción"
+        comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         id: "ID"
         max_stock: "Stock máximo"
         min_stock: "Stock mínimo"
@@ -127,6 +129,7 @@ es:
           distributor: "Distribuidor"
           hardware_store: "Ferretería"
         comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         country: "País"
         created_at: "Ingresado"
         email: "Email"
@@ -168,6 +171,7 @@ es:
         updated_at: "Actualizado"
         created_at: "Ingresado"
         comments: "Observaciones"
+        comments_plain_text: "Observaciones"
         bank_name: "Banco"
         bank_account_number: "Cuenta"
         routing_number: "CBU"
