--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -268,6 +268,8 @@ es:
 
   office:
     clients:
+      index:
+        view_client: "Ver cliente"
       create:
         success: "Cliente creado."
       update:
@@ -296,6 +298,11 @@ es:
         success: "Producto actualizado"
       destroy:
         success: "Producto eliminado"
+  sales:
+    sales_orders:
+      index:
+        title: "Pedidos"
+        no_sales_orders: "No hay pedidos"
   auditable:
     boolean_true: "Sí"
     boolean_false: "No"
