Sort by last sales order date

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -142,12 +142,13 @@ es:
           regular: "Usuario"
           distributor: "Distribuidor"
           hardware_store: "Ferretería"
-        comments: "Observaciones"
         comments_plain_text: "Observaciones"
+        comments: "Observaciones"
         country: "País"
         created_at: "Ingresado"
         email: "Email"
         id: "ID"
+        last_sales_order_at: "Último pedido"
         maps_url: "Enlace Mapa"
         name: "Nombre"
         phone: "Teléfono"
